name:                DHT-NS
version:             0.1.0.0
synopsis:            A thin Name Server API built ontop of a DHT.
description:         A thin Name Server API backed by a DHT allowing names
                     to be looked up and associated with IP address (and ports).
license:             BSD3
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
category:            Join
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   DHT.NS
                   , DHT.NS.Logging
  other-modules:     DHT.NS.RoutingTable
                   , DHT.NS.ValueStore
                   , DHT.NS.Messaging

  build-depends:     base
                   , time
                   , bytestring
                   , transformers
                   , containers
                   , string-conv
                   , DHT
                   , bimap
                   , random
                   , network

  default-language:  Haskell2010

  ghc-options:       -Wall
